<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/detailView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/innerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/small_spacing">

        <TextView
            android:id="@+id/bookTitle"
            style="@style/detail_style" />


        <TextView
            android:id="@+id/bookAuthor"
            style="@style/detail_style"
            android:layout_below="@+id/bookTitle" />


        <TextView
            android:id="@+id/bookPrice"
            style="@style/detail_style"
            android:layout_below="@+id/bookAuthor" />

        <Button
            android:id="@+id/increase"
            style="@style/button_style"
            android:layout_below="@+id/bookPrice"
            android:text="@string/increase_button" />


        <TextView
            android:id="@+id/bookQuantity"
            style="@style/detail_style"
            android:layout_below="@+id/increase" />

        <TextView
            android:id="@+id/labelQuantity"
            style="@style/label_style"
            android:layout_toLeftOf="@+id/bookQuantity"
            android:text="@string/quantity_label" />

        <Button
            android:id="@+id/decrease"
            style="@style/button_style"
            android:layout_below="@+id/bookQuantity"
            android:text="@string/decrease_button" />


        <TextView
            android:id="@+id/bookSupplier"
            style="@style/detail_style"
            android:layout_below="@+id/decrease" />


        <TextView
            android:id="@+id/bookSupPhone"
            style="@style/detail_style"
            android:layout_below="@+id/bookSupplier" />

    </RelativeLayout>


    <LinearLayout
        android:id="@+id/buttonGroup2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:padding="@dimen/medium_spacing">

        <Button
            android:id="@+id/order"
            style="@style/button_style"
            android:text="@string/order_button" />

        <Button
            android:id="@+id/delete"
            style="@style/button_style"
            android:text="@string/delete_button" />

        <Button
            android:id="@+id/edit"
            style="@style/button_style"
            android:text="@string/edit_button" />

    </LinearLayout>


</RelativeLayout>